# Dynamo-DB-Multi-Agent

./: DynamoDB_Multi_Agent_Report.md  LICENSE  README.md  agent_supervisor.ipynb  dynamodb_supervisor.ipynb  dynamodb_supervisor_bedrock.ipynb  js2  pyproject.toml  report.md  table_count.json
orchestrata/: README.md
orchestrata/src/orchestrata/: crew.py
output/: dynamodb_row_count.json  table_count.json  table_row_count.json
src/orchestrata/: main.py
