[project]
name = "orchestrata"
version = "0.1.0"
description = "orchestrata using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
orchestrata = "orchestrata.main:run"
run_crew = "orchestrata.main:run"
train = "orchestrata.main:train"
replay = "orchestrata.main:replay"
test = "orchestrata.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
